<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/list_of_movies"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/text_from_date"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/holo_blue_light"
        android:focusable="false"
        android:gravity="start"
        android:hint="@string/from_date"
        android:inputType="datetime"
        android:padding="5dp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/text_to_date"
        app:layout_constraintTop_toBottomOf="@+id/text_header"/>

    <EditText
        android:id="@+id/text_to_date"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/holo_blue_light"
        android:focusable="false"
        android:gravity="start"
        android:hint="@string/to_date"
        android:inputType="datetime"
        android:padding="5dp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@+id/text_from_date"
        app:layout_constraintRight_toLeftOf="@+id/search_by_date"
        app:layout_constraintTop_toBottomOf="@+id/text_header"/>

    <Button
        android:id="@+id/search_by_date"
        android:layout_width="90dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/search_by_date"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
        android:textColor="@android:color/white"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@+id/text_to_date"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_header"/>

    <TextView
        android:id="@+id/text_no_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_data"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_layout_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/search_by_date">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">
        </android.support.v7.widget.RecyclerView>

    </android.support.v4.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/progress_download_content"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>